<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">Parse Starter Project</string>

    <string name="hello_world">Hello World!</string>
    <string name="edit">Edit Profile</string>
    <string name="facebook_app_id">268273139871724</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usernameInLogin" />
    <string name="passwordInLogin" />
    <string name="nameInSignUp" />
    <string name="emailInSignUp" />
    <string name="passwordInSignUp" />
    <string name="confirmpasswordInSignUp" />
    <string name="skipInDisplayPicture"><u>SKIP</u></string>
    <string name="lnameInSignUp" />
    <string name="title_activity_dp">DP</string>
    <string name="fnameInEditing" />
    <string name="lnameInEditing" />
    <string name="emailInEditing" />
    <string name="createAlbum">Create Album</string>
    <string name="addmorepicstext" />
    <string name="privacysuggestion">Album\'s privacy is set to <b>private</b>. You can invite users to this album!</string>
    <string name="userFullName" />
    <string name="albumname" />
    <string name="title_activity_album_details">AlbumDetails</string>
    <string name="nameInDetails" />
    <string name="privacyInDetails" />
    <string name="title_activity_changeprivacy">changeprivacy</string>
    <string name="albumnameinaddphotos" />
    <string name="albumnameInViewAlbum" />
    <string name="title_activity_chat">Chat</string>
</resources>
