<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.parse.starter.signup">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/nameInSignUp"
            android:ems="10"
            android:id="@+id/fnameInSignUp"
            android:layout_gravity="center_horizontal"
            android:hint="enter first name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/lnameInSignUp"
            android:ems="10"
            android:id="@+id/lnameInSignUp"
            android:hint="enter last name" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="58dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Gender:"
                android:id="@+id/textView2"
                android:layout_weight="0.5" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/malefemale"
                android:layout_marginRight="30dp"
                android:textOn="female"
                android:textOff="male"
                android:text="Male(OFF)/Female(ON)" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailInSignUp"
            android:layout_gravity="center_horizontal"
            android:text="@string/emailInSignUp"
            android:hint="enter email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordInSignUp"
            android:layout_gravity="center_horizontal"
            android:text="@string/passwordInSignUp"
            android:hint="enter password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/confirmpasswordInSignUp"
            android:layout_gravity="center_horizontal"
            android:text="@string/confirmpasswordInSignUp"
            android:hint="confirm password" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign up"
            android:id="@+id/signupInSignUp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="cancel"
            android:id="@+id/cancelinSignUp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</FrameLayout>
